# igc_parser

./: .gitignore  BACKLOG.md  Cargo.toml  LICENSE  README.md  RECORD_PREFIX_GUIDE.md
.VSCodeCounter/2024-07-13_14-15-04/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
examples/: example.igc
src/: error.rs  lib.rs  main.rs
src/igc_file/: mod.rs
src/parser_builder/: mod.rs
src/records/: comment.rs  data_fix.rs  diff_gps.rs  error.rs  event.rs  extension.rs  file_header.rs  fix.rs  flight_recorder_id.rs  mod.rs  satellite.rs  security.rs  task_info.rs  util.rs
src/util/: error.rs
